--- a/package.json
+++ b/package.json
@@ -2,13 +2,36 @@
     "name": "sukunabikona",
     "version": "0.0.1",
     "description": "wp-env を使用した最小限の開発環境",
+    "main": "gulpfile.js",
     "scripts": {
-        "wp-env": "wp-env"
+        "wp:start": "wp-env start",
+        "wp:stop": "wp-env stop",
+        "gulp": "gulp",
+        "start": "npm-run-all -s setting_env gulp",
+        "restart": "gulp",
+        "setting_env": "node ./bin/tasks/settingenv"
     },
     "author": "Arm Band",
     "license": "ISC",
     "devDependencies": {
-        "@wordpress/env": "*"
+        "@wordpress/env": "^1.3.0",
+        "browser-sync": "^2.26.7",
+        "dotenv": "^8.2.0",
+        "gulp": "^4.0.2",
+        "gulp-imagemin": "^7.1.0",
+        "imagemin-mozjpeg": "^8.0.0",
+        "imagemin-pngquant": "^8.0.0",
+        "imagemin-gifsicle": "^7.0.0",
+        "imagemin-svgo": "^7.1.0",
+        "gulp-notify": "^3.2.0",
+        "gulp-plumber": "^1.2.1",
+        "gulp-rename": "^2.0.0",
+        "gulp-sass": "^4.1.0",
+        "gulp-autoprefixer": "^7.0.1",
+        "gulp-sourcemaps": "^2.6.5",
+        "gulp-uglify-es": "^2.0.0",
+        "gulp-watch": "^5.0.1",
+        "npm-run-all": "^4.1.5"
     },
     "engines": {
         "node": ">= 12.0.0",
