--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "author": "Arm Band",
     "license": "ISC",
     "devDependencies": {
-        "@wordpress/env": "^1.3.0",
+        "@wordpress/env": "^1.4.0",
         "browser-sync": "^2.26.7",
         "dotenv": "^8.2.0",
         "gulp": "^4.0.2",
@@ -34,7 +34,8 @@
         "npm-run-all": "^4.1.5"
     },
     "engines": {
-        "node": ">= 12.0.0",
-        "npm": ">= 6.0.0"
-    }
+        "node": ">=12.0.0",
+        "npm": ">=6.0.0"
+    },
+    "engineStrict": true
 }
