--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "sukunabikona",
-    "version": "0.0.2",
+    "name": "geidon",
+    "version": "0.0.3",
     "description": "wp-env を使用した最小限の開発環境",
     "main": "gulpfile.js",
     "scripts": {
@@ -14,23 +14,24 @@
     "author": "Arm Band",
     "license": "ISC",
     "devDependencies": {
-        "@wordpress/env": "^2.0.0",
-        "browser-sync": "^2.26.12",
+        "@wordpress/env": "^2.1.0",
+        "browser-sync": "^2.26.13",
         "dotenv": "^8.2.0",
         "gulp": "^4.0.2",
         "gulp-imagemin": "^7.1.0",
         "imagemin-mozjpeg": "^9.0.0",
-        "imagemin-pngquant": "^9.0.0",
+        "imagemin-pngquant": "^9.0.1",
         "imagemin-gifsicle": "^7.0.0",
         "imagemin-svgo": "^8.0.0",
         "gulp-notify": "^3.2.0",
         "gulp-plumber": "^1.2.1",
         "gulp-rename": "^2.0.0",
         "gulp-sass": "^4.1.0",
+        "sass": "^1.29.0",
+        "fibers": "^5.0.0",
         "gulp-autoprefixer": "^7.0.1",
-        "gulp-sourcemaps": "^2.6.5",
+        "gulp-sourcemaps": "^3.0.0",
         "gulp-uglify-es": "^2.0.0",
-        "gulp-watch": "^5.0.1",
         "npm-run-all": "^4.1.5"
     },
     "engines": {
