--- a/sample.env
+++ b/sample.env
@@ -1,4 +1,6 @@
-DEV_MODE=true
-IMAGE_MIN=true
 PROXY_HOST=localhost
 PROXY_PORT=8889
+# DEV_MODE: Please choose from the three parameters below.
+# dev, demo, prod
+DEV_MODE=dev
+IMAGE_MIN=true
