--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "geidon",
-    "version": "0.0.4",
+    "version": "0.0.5",
     "description": "wp-env を使用した最小限の開発環境",
     "main": "gulpfile.js",
     "scripts": {
@@ -15,31 +15,34 @@
     "author": "Arm Band",
     "license": "ISC",
     "devDependencies": {
-        "@wordpress/env": "^4.1.3",
-        "browser-sync": "^2.27.7",
-        "dotenv": "^10.0.0",
+        "@wordpress/env": "^4.5.0",
+        "browser-sync": "^2.27.9",
+        "dotenv": "^16.0.0",
         "gulp": "^4.0.2",
         "gulp-imagemin": "^7.1.0",
         "imagemin-mozjpeg": "^9.0.0",
         "imagemin-pngquant": "^9.0.2",
         "imagemin-gifsicle": "^7.0.0",
         "imagemin-svgo": "^9.0.0",
-        "gulp-notify": "^3.2.0",
+        "gulp-notify": "^4.0.0",
         "gulp-plumber": "^1.2.1",
         "gulp-rename": "^2.0.0",
-        "gulp-sass": "^5.0.0",
-        "sass": "^1.43.4",
+        "gulp-sass": "^5.1.0",
+        "sass": "^1.50.0",
         "gulp-autoprefixer": "^8.0.0",
         "gulp-sourcemaps": "^3.0.0",
-        "webpack": "^5.61.0",
+        "webpack": "^5.72.0",
         "webpack-stream": "^7.0.0",
-        "terser-webpack-plugin": "^5.2.4",
+        "terser-webpack-plugin": "^5.3.1",
         "clean-webpack-plugin": "^4.0.0",
         "npm-run-all": "^4.1.5"
     },
+    "resolutions": {
+        "gifsicle": "5.2.1"
+    },
     "engines": {
-        "node": ">=16.0.0",
-        "npm": ">=6.14.9"
+        "node": ">=16.14.0",
+        "npm": ">=8.5.0"
     },
     "engineStrict": true
 }
